force-app/main/default/objects/Expense_Report__c/Expense_Report__c.object-meta.xml
<CustomObject>
    <label>Expense Report</label>
    <nameField>
        <displayFormat>ER-{000000}</displayFormat>
        <label>Expense Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>